# mt5-terminal

./: .gitignore  README.md
.github/workflows/: deploy.yml  docker.yml  mt5_docker.yml
MT5/: .dockerignore  .env.example  Dockerfile  compose.yml  deploy  docker-compose.yml
MT5/api/: .env.example  pyproject.toml  readme.adoc  requirements.txt  run
MT5/api/api/: __main__.py  main.py
MT5/api/api/api/dependencies/: auth.py
MT5/api/api/api/routes/: account.py  auth.py  history.py  positions.py  symbols.py  trading.py
MT5/api/api/db/: crud.py  database.py
MT5/api/api/models/: mt5.py  trading.py
MT5/api/api/services/: connector.py  market_data.py  trade.py
MT5/api/api/utils/: helpers.py  logger.py  trailing.py
MT5/api/app/: __init__.py  __main__.py  main.py
MT5/api/app/db/: crud.py  database.py
MT5/api/app/dependencies/: auth.py
MT5/api/app/models/: mt5.py  trading.py
MT5/api/app/routers/: __init__.py  account.py  auth.py  history.py  positions.py  symbols.py  terminal.py  trading.py
MT5/api/app/services/: connector.py  history.py  market_data.py  mt5_service.py  trade.py
MT5/api/app/utils/: config.py  constants.py  email.py  exceptions.py  helpers.py  logger.py  trailing.py
MT5/api/test/: endpoints_test.py  sendorder_test.py
MT5/assets/: auto_login.py  entrypoint.sh  menu.xml  metatrader.desktop  mt-inst.sh  nginx.conf  requirements.txt  rmX11Lock.sh  run-mt5.sh  run-server.sh  server.py  supervisord.conf  vnc-auth.sh  vnc_auth.sh  wine-inst.sh
docs/: github-actions-setup.md  server-setup.md
nginx/sites-available/: mt5  mt5.conf  no-vnc.conf
nginx/snippets/: proxy_params.conf
