[project]
name = "api"
version = "0.1.0"
description = "MT5 API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "pandas",
    "numpy",
    "python-dotenv",
    "requests",
    "sqlalchemy",
    "MetaTrader5; sys_platform == 'win32'",
    "pydantic-settings",
    "apscheduler",
    "prometheus-fastapi-instrumentator",
    "pytz>=2025.2",
]

